[package]
name = "cargo-mobile2"
version = "0.6.0"
authors = [
  "Tauri Programme within The Commons Conservancy",
  "Brainium Studios LLC",
  "Francesca Lovebloom <francesca@brainiumstudios.com>"
]
edition = "2021"
description = "Rust on mobile made easy!"
documentation = "https://docs.rs/cargo-mobile2"
repository = "https://github.com/tauri-apps/cargo-mobile2"
readme = "README.md"
keywords = [ "cargo", "mobile", "ios", "android", "tauri" ]
categories = [ "development-tools::cargo-plugins" ]
license = "Apache-2.0 OR MIT"

[[bin]]
name = "cargo-mobile"
required-features = [ "cli" ]

[[bin]]
name = "cargo-apple"
required-features = [ "cli" ]

[[bin]]
name = "cargo-android"
required-features = [ "cli" ]

[features]
cli = [
  "home",
  "dunce",
  "handlebars",
  "log",
  "serde",
  "serde_json",
  "thiserror",
  "structopt",
  "env_logger"
]
brainium = [ ]
rustls = [ "ureq/tls" ]
native-tls = [ "ureq/native-tls" ]
openssl-vendored = [ "openssl/vendored" ]
default = [ "cli", "ureq/native-tls" ]

[dependencies]
handlebars = "4.3"
serde_json = "1.0"
colored = "1.9"
deunicode = "1.1"
dunce = "1.0"
english-numbers = "0.3"
env_logger = { version = "0.7", optional = true }
heck = "0.4"
home = "0.5"
ignore = "0.4"
indexmap = "1.3"
java-properties = { version = "1.2" }
log = "0.4"
once-cell-regex = "0.2"
path_abs = "0.5"
serde = { version = "1.0", features = [ "derive" ] }
structopt = { version = "0.3", optional = true }
textwrap = { version = "0.11", features = [ "term_size" ] }
thiserror = "1.0"
toml = { version = "0.5", features = [ "preserve_order" ] }
os_pipe = "1"
duct = "0.13"
which = "4.4"

[dev-dependencies]
rstest = "0.18"
simple_logger = "1.11"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.20"
core-foundation = "0.9"
openssl = "0.10"
objc = "0.2"
objc_id = "0.1"

[target."cfg(not(target_os = \"macos\"))".dependencies]
ureq = { version = "2.4", default-features = false, features = [ "gzip" ] }

[target."cfg(target_os = \"linux\")".dependencies]
freedesktop_entry_parser = "1.1"
lexical-core = "0.7"

[target."cfg(unix)".dependencies]
libc = "0.2"

[target."cfg(windows)".dependencies.windows]
version = "0.39"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_IO",
  "Win32_System_Ioctl",
  "Win32_System_Memory",
  "Win32_System_Registry",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_UI_Shell"
]

[target."cfg(windows)".build-dependencies]
embed-resource = "1.8"

[build-dependencies]
home = { version = "0.5", optional = true }
dunce = { version = "1.0", optional = true }
handlebars = { version = "4.3", optional = true }
log = { version = "0.4", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = { version = "1.0", optional = true }
