[package]
name = "cargo-mobile2"
version = "0.12.1"
authors = [
  "Tauri Programme within The Commons Conservancy",
  "Brainium Studios LLC",
  "Francesca Lovebloom <francesca@brainiumstudios.com>"
]
edition = "2021"
description = "Rust on mobile made easy!"
documentation = "https://docs.rs/cargo-mobile2"
repository = "https://github.com/tauri-apps/cargo-mobile2"
readme = "README.md"
keywords = [ "cargo", "mobile", "ios", "android", "tauri" ]
categories = [ "development-tools::cargo-plugins" ]
license = "Apache-2.0 OR MIT"

[[bin]]
name = "cargo-mobile"
required-features = [ "cli" ]

[[bin]]
name = "cargo-apple"
required-features = [ "cli" ]

[[bin]]
name = "cargo-android"
required-features = [ "cli" ]

[features]
cli = [
  "home",
  "dunce",
  "handlebars",
  "log",
  "serde",
  "serde_json",
  "thiserror",
  "structopt",
  "env_logger"
]
brainium = [ ]
rustls = [ "ureq/tls" ]
native-tls = [ "ureq/native-tls" ]
default = [ "cli", "ureq/native-tls" ]

[dependencies]
handlebars = "5.0"
serde_json = "1.0"
colored = "2.1"
deunicode = "1.4"
dunce = "1.0"
english-numbers = "0.3"
env_logger = { version = "0.11", optional = true }
heck = "0.5"
home = "0.5"
ignore = "0.4"
java-properties = "2.0"
log = "0.4"
once-cell-regex = "0.2"
path_abs = "0.5"
serde = { version = "1.0", features = [ "derive" ] }
structopt = { version = "0.3", optional = true }
textwrap = { version = "0.16", features = [ "terminal_size" ] }
thiserror = "1.0"
toml = { version = "0.8", features = [ "preserve_order" ] }
duct = "0.13"
which = "6.0"
os_pipe = "1"

[dev-dependencies]
rstest = "0.19"

[target."cfg(target_os = \"macos\")".dependencies]
core-foundation = "0.9"
x509-certificate = "0.23"
os_info = "3"

[target."cfg(not(target_os = \"macos\"))".dependencies]
ureq = { version = "2.9", default-features = false, features = [ "gzip" ] }

[target."cfg(target_os = \"linux\")".dependencies]
freedesktop_entry_parser = "1.3"

[target."cfg(unix)".dependencies]
libc = "0.2"

[target."cfg(windows)".dependencies.windows]
version = "0.56"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_IO",
  "Win32_System_Ioctl",
  "Win32_System_Memory",
  "Win32_System_Registry",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_UI_Shell"
]

[target."cfg(windows)".build-dependencies]
embed-resource = "2.4"

[build-dependencies]
home = { version = "0.5", optional = true }
dunce = { version = "1.0", optional = true }
handlebars = { version = "5.0", optional = true }
log = { version = "0.4", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = { version = "1.0", optional = true }
