[package]
name = "ginit-core"
version = "0.1.0"
authors = ["Brainium Studios LLC"]
edition = "2018"

[dependencies]
bicycle = { git = "ssh://git@bitbucket.org/brainium/bicycle.git" }
clap = { version = "2.33.0", features = ["color"] }
colored = "1.8.0"
deunicode = "1.0.0"
heck = "0.3.1"
hyphenation = "0.7.1"
into-result = "0.1.1"
log = "0.4.8"
once-cell-regex = "0.1.0"
path_abs = "0.5.0"
publicsuffix = { version = "1.5.3", default-features = false }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
structopt = "0.3.7"
textwrap = { version = "0.11.0", features = ["hyphenation", "term_size"] }
toml = { version = "0.5.5", features = ["preserve_order"] }
