[package]
name = "ginit"
version = "0.5.0"
authors = ["Brainium Studios LLC"]
edition = "2018"
description = "Game dev productivity tools"

[[bin]]
name = "cargo-ginit"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
env_logger = "0.6.2"
ginit-core = { path = "../ginit-core" }
lazy_static = "1.4.0"
log = "0.4.8"
regex = "1.3.1"
serde = { version = "1.0.101", features = ["derive"] }
toml = "0.5.3"
