[package]
name = "ginit"
version = "0.5.0"
authors = ["Brainium Studios LLC"]
edition = "2018"
description = "Game dev productivity tools"

[[bin]]
name = "cargo-ginit"
path = "src/main.rs"

[dependencies]
env_logger = "0.6.2"
ginit-core = { path = "../ginit-core" }
indexmap = "1.3.0"
log = "0.4.8"
serde = { version = "1.0.101", features = ["derive"] }
structopt = "0.3.7"

[build-dependencies]
ginit-core = { path = "../ginit-core" }
