[package]
name = "ginit"
version = "0.1.0"
authors = ["Brainium Studios LLC"]
edition = "2018"

[dependencies]
bicycle = { git = "ssh://git@bitbucket.org/brainium/bicycle.git", rev = "992e768518743b6f6ff39d5eb79c33cc343f91dc" }
bitflags = "1.1.0"
colored = "1"
deunicode = "1.0.0"
heck = "0.3.1"
hyphenation = "0.7.1"
into-result = "0.1.1"
java-properties = "1.2.0"
lazy_static = "1"
log = "0.4"
openssl = "0.10"
path_abs = "0.5.0"
publicsuffix = { version = "1.5.3", default-features = false }
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0.40"
textwrap = { version = "0.11.0", features = ["hyphenation", "term_size"] }
toml = "0.5"
