[package]
name = "ginit-android"
version = "0.1.0"
authors = ["Brainium Studios LLC"]
edition = "2018"
description = "Tools for Android"

[package.metadata.ginit]
supports = ["init"]

[dependencies]
ginit-core = { path = "../../ginit-core" }
java-properties = "1.2.0"
log = "0.4.8"
serde = { version = "1.0.101", features = ["derive", "rc"] }
serde_json = "1.0.40"
structopt = "0.3.7"

