[package]
name = "ginit-brainium"
version = "0.1.0"
authors = ["Brainium Studios LLC"]
edition = "2018"
description = "Tools for Brainium"

[package.metadata.ginit]
supports = ["init"]

[dependencies]
ginit-core = { path = "../../ginit-core" }
lazy_static = "1.4.0"
regex = "1.3.1"
serde = { version = "1.0.101", features = ["derive"] }
