[package]
name = "ginit-ios"
version = "0.1.0"
authors = ["Brainium Studios LLC"]
edition = "2018"
description = "Tools for iOS"

[package.metadata.ginit]
supports = ["init"]

[dependencies]
colored = "1"
ginit-core = { path = "../../ginit-core" }
into-result = "0.1.1"
lazy_static = "1"
log = "0.4"
openssl = "0.10"
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0.40"
textwrap = { version = "0.11.0", features = ["hyphenation", "term_size"] }
