[package]
name = "ginit-ios"
version = "0.1.0"
authors = ["Brainium Studios LLC"]
edition = "2018"
description = "Tools for iOS"

[package.metadata.ginit]
supports = ["init"]

[dependencies]
ginit-core = { path = "../../ginit-core" }
log = "0.4"
openssl = "0.10"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0.40"
textwrap = { version = "0.11.0", features = ["hyphenation", "term_size"] }
